Adicionando imagens e cores

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     </head>
     <body>
         <header>
-            <h1>Tecnologia nas Enchentes</h1>
+            <img  class="logo" src="assets/images/logo_sem_fundo.png" alt="logo HydroTech">
         </header>
         <div class="links">
-            <h3><a href="#solucao">Solução</a></h3>
+            <h3><a href="#problema">Problema</a></h3>
             <h3><a href="#tecnologias">Tecnologias</a></h3>
             <h3><a href="#objetivos">Objetivos</a></h3>
             <h3><a href="#publicoAlvo">Público-Alvo</a></h3>
@@ -26,7 +26,7 @@
         <div class="secoes">
             <section>
                 <div class="titleSecao">
-                    <h2 id="solucao">Solução</h2>
+                    <h2 id="problema">Problema</h2>
                 </div>
                 <div class="conteudo">
                     <div>
@@ -42,8 +42,9 @@
                             resposta das autoridades e aumentando a segurança da
                             população.</p>
                     </div>
-                    <div><img class="imgDesc" src="nota_nano_course.jpg"
-                            alt></div>
+                    <div><img class="imgDesc"
+                            src="assets/images/img_enchente.jpg"
+                            alt="Imagem de enchente"></div>
                 </div>
             </section>
             <section>
@@ -52,18 +53,26 @@
                 </div>
                 <div class="conteudo">
                     <div>
-                        <p>A solução integrará diversas tecnologias modernas,
-                            como inteligência artificial para previsão de
-                            enchentes, sensoriamento remoto por satélites e
-                            drones, redes de sensores IoT, plataformas de Big
-                            Data para análise em tempo real e aplicativos móveis
-                            georreferenciados para alertas e comunicação. Além
-                            disso, serão utilizados sistemas de modelagem urbana
-                            como GIS e BIM, promovendo um planejamento urbano
-                            baseado em dados e simulações hidrológicas.</p>
+                        <p>A Hydrotech propõe um sistema inteligente de
+                            monitoramento em tempo real, utilizando sensores IoT
+                            e análise de dados para prever riscos de enchentes e
+                            alertar a população e autoridades. O funcionamento
+                            do sistema envolve as seguintes etapas:
+                        </p>
+                        <ul>
+                            <li>Sensores de nível de água são instalados em
+                                pontos estratégicos de rios e córregos.</li>
+                            <li>Os dados são enviados automaticamente para a
+                                nuvem via rede sem fio (LoRa ou 4G).</li>
+                            <li>Um sistema central analisa os dados usando
+                                algoritmos preditivos.</li>
+                            <li>Alertas são emitidos por meio de aplicativo, SMS
+                                e sirenes locais em caso de risco.</li>
+                        </ul>
                     </div>
-                    <div><img class="imgDesc" src="nota_nano_course.jpg"
-                            alt></div>
+                    <div><img class="imgDesc"
+                            src="assets/images/img_alert.jpg"
+                            alt="Imagem de alerta de enhente"></div>
                 </div>
             </section>
             <section>
@@ -72,15 +81,22 @@
                 </div>
                 <div class="conteudo">
                     <div>
-                        <p>Queremos reduzir mortes, minimizar prejuízos e
-                            melhorar a resposta emergencial a desastres com uso
-                            de tecnologias acessíveis e integradas.
-                            Também pretendemos fortalecer o planejamento urbano,
-                            democratizar a informação e promover a colaboração
-                            entre comunidades, prefeituras e órgãos de defesa
-                            civil.</p>
+                        <p>A Hydrotech tem como objetivo principal reduzir
+                            mortes e minimizar prejuízos causados por enchentes
+                            por meio de um sistema inteligente de monitoramento
+                            em tempo real. Utilizando sensores IoT, análise de
+                            dados e alertas integrados, buscamos melhorar a
+                            resposta emergencial a desastres, oferecendo
+                            tecnologia acessível e eficiente. Além disso,
+                            pretendemos fortalecer o planejamento urbano com
+                            base em dados concretos, democratizar o acesso à
+                            informação e incentivar a colaboração entre
+                            comunidades, prefeituras e órgãos de defesa civil,
+                            promovendo uma gestão preventiva e integrada dos
+                            riscos ambientais.</p>
                     </div>
-                    <div><img class="imgDesc" src="nota_nano_course.jpg"
+                    <div><img class="imgDesc"
+                            src="assets/images/img_defesa_civil.jpg"
                             alt></div>
                 </div>
             </section>
@@ -90,17 +106,19 @@
                 </div>
                 <div class="conteudo">
                     <div>
-                        <p>A solução visa beneficiar diretamente populações que
-                            vivem em áreas de risco de inundações,
-                            principalmente em regiões urbanas com déficit de
-                            infraestrutura, como a Região Metropolitana de São
-                            Paulo, a Baixada Fluminense e o Vale do Itajaí.
-                            Também serão impactadas positivamente as autoridades
-                            municipais, equipes de Defesa Civil e gestores
-                            públicos responsáveis por políticas de prevenção e
-                            resposta a desastres.</p>
+                        <p>O público-alvo da solução Hydrotech inclui
+                            prefeituras e governos estaduais, responsáveis pela
+                            gestão urbana e prevenção de desastres; órgãos como
+                            a Defesa Civil e o Corpo de Bombeiros, que atuam
+                            diretamente em situações de emergência; comunidades
+                            que vivem em áreas de risco de enchentes,
+                            beneficiadas por alertas antecipados; além de ONGs
+                            ambientais e empresas de saneamento, que podem
+                            utilizar os dados para ações preventivas e de
+                            sustentabilidade.</p>
                     </div>
-                    <div><img class="imgDesc" src="nota_nano_course.jpg"
+                    <div><img class="imgDesc"
+                            src="assets/images/img_mapa_areas_de_risco.webp"
                             alt></div>
                 </div>
             </section>
@@ -110,14 +128,25 @@
                 </div>
                 <div class="conteudo">
                     <div>
-                        <p>O sistema trará alertas rápidos, redução de danos,
-                            planejamento inteligente e mais segurança para as
-                            comunidades expostas aos riscos hidrológicos.
-                            Populações vulneráveis terão acesso fácil à
-                            informação. A tecnologia permitirá um uso melhor de
-                            recursos públicos e salvará muitas vidas.</p>
+                        <p>A solução proposta pela Hydrotech oferece uma série
+                            de benefícios significativos para a sociedade e os
+                            órgãos públicos. Entre eles, destaca-se o alerta
+                            antecipado para evacuação de áreas de risco,
+                            possibilitando ações preventivas e maior segurança
+                            para a população. O sistema também contribui
+                            diretamente para a redução de danos materiais e
+                            perda de vidas, especialmente em regiões vulneráveis
+                            a enchentes. Além disso, fornece suporte valioso à
+                            tomada de decisão por parte da Defesa Civil, por
+                            meio de dados precisos e atualizados em tempo real.
+                            Outro benefício relevante é o monitoramento contínuo
+                            e o registro histórico de dados ambientais,
+                            permitindo análises detalhadas que auxiliam no
+                            planejamento urbano e na gestão de riscos
+                            futuros.</p>
                     </div>
-                    <div><img class="imgDesc" src="nota_nano_course.jpg"
+                    <div><img class="imgDesc"
+                            src="assets/images/img_abrigo.jpg"
                             alt></div>
                 </div>
             </section>
@@ -127,26 +156,32 @@
                 </div>
                 <div class="conteudo">
                     <div>
-                        <p>No cotidiano, a solução permitirá que moradores de
-                            áreas de risco recebam alertas claros e
-                            personalizados sobre o risco de enchentes, com
-                            instruções práticas sobre onde se abrigar ou por
-                            quais rotas evacuar. Autoridades terão acesso a
-                            painéis integrados com dados em tempo real para
-                            coordenar ações emergenciais. Engenheiros e
-                            urbanistas poderão planejar e executar obras de
-                            drenagem e contenção com base em simulações
-                            digitais. Com isso, a resposta a eventos extremos se
-                            tornará mais rápida, eficiente e colaborativa,
-                            salvando vidas e minimizando prejuízos.</p>
+                        <p>No cotidiano, a solução da Hydrotech trará maior
+                            segurança e praticidade para comunidades vulneráveis
+                            a enchentes. Moradores de áreas de risco receberão
+                            alertas personalizados com instruções claras sobre
+                            rotas de evacuação e locais seguros para abrigo,
+                            permitindo que ajam com rapidez diante de qualquer
+                            ameaça. As autoridades terão acesso a painéis de
+                            controle em tempo real, otimizando a coordenação de
+                            equipes de emergência e o direcionamento de
+                            recursos. Já engenheiros e urbanistas contarão com
+                            dados históricos e simulações digitais que apoiarão
+                            decisões estratégicas sobre obras de drenagem,
+                            contenção e infraestrutura urbana. Dessa forma, a
+                            resposta a desastres naturais se tornará mais ágil,
+                            precisa e integrada, contribuindo para salvar vidas,
+                            evitar prejuízos e fortalecer o planejamento das
+                            cidades.</p>
                     </div>
-                    <div><img class="imgDesc" src="nota_nano_course.jpg"
+                    <div><img class="imgDesc"
+                            src="assets/images/img_evacuação.webp"
                             alt></div>
                 </div>
             </section>
         </div>
         <footer>
-            
+
         </footer>
     </body>
 </html>
