Descrição das imagens

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     </div>
                     <div><img class="imgDesc"
                             src="assets/images/img_alert.jpg"
-                            alt="Imagem de alerta de enhente"></div>
+                            alt="Imagem de alerta de enchente"></div>
                 </div>
             </section>
             <section>
@@ -97,7 +97,7 @@
                     </div>
                     <div><img class="imgDesc"
                             src="assets/images/img_defesa_civil.jpg"
-                            alt></div>
+                            alt="Imagem da defesa civil"></div>
                 </div>
             </section>
             <section>
@@ -119,7 +119,7 @@
                     </div>
                     <div><img class="imgDesc"
                             src="assets/images/img_mapa_areas_de_risco.webp"
-                            alt></div>
+                            alt="Imagem de mapa com áreas de risco"></div>
                 </div>
             </section>
             <section>
@@ -147,7 +147,7 @@
                     </div>
                     <div><img class="imgDesc"
                             src="assets/images/img_abrigo.jpg"
-                            alt></div>
+                            alt="Imagem de abrigo para enchentes"></div>
                 </div>
             </section>
             <section>
@@ -176,7 +176,7 @@
                     </div>
                     <div><img class="imgDesc"
                             src="assets/images/img_evacuação.webp"
-                            alt></div>
+                            alt="Imagem de evacuação de um bairro"></div>
                 </div>
             </section>
         </div>
